# itc-form-generator

./: .gitignore  Dockerfile  Procfile  README.md  app.py  config.py  gunicorn.conf.py  render.yaml  requirements.txt  wsgi.py
itc_form_generator/: .dockerignore  .gitignore  Dockerfile  Dockerfile_v2.txt  INTEGRATION_GUIDE.md  NEST_DEPLOYMENT.md  POINTS_INTEGRATION_GUIDE.md  README.md  SOO_POINTS_INTEGRATION.md  __init__.py  __init___v2.py  __main___v2.py  ai_service.py  ats_templates.py  base_templates.py  build.py  cli.py  common_sections.py  crah_form_generator.py  crah_templates.py  daiquery_quick.sql  deploy_to_nest.sh  docker-compose_v2.yml  equipment_templates.py  example_form_parser.py  exporter.py  feedback_enhancer.py  feedback_store.py  flask_app.py  flask_config.py  flask_wsgi.py  form_generator.py  gunicorn_conf.py  hive_itc_analysis.ipynb  itc_analysis_queries.sql  iwm_form_generator.py  launcher.py  models.py  mua_form_generator.py  mua_parser.py  (+33 more)
itc_form_generator/package/: Install.bat  Install.ps1  README.md  README.txt
itc_form_generator/src/itc_form_generator/: __init__.py  ai_service.py  ai_service_v1_backup.py  ats_templates.py  base_templates.py  common_sections.py  crah_form_generator.py  crah_templates.py  equipment_templates.py  example_form_parser.py  exporter.py  feedback_enhancer.py  feedback_store.py  form_generator.py  iwm_form_generator.py  models.py  mua_form_generator.py  mua_parser.py  parser(1).py  parser.py  parser_v1_backup.py  pdf_parser.py  points_parser.py  points_parser_v1_backup.py  renderer.py  rsb_templates.py  (+1 more)
(+12 files in other folders)
